<resources>
    // Activity titles
    <string name="app_name">c_4_me_mobile</string>
    <string name="home_page_title">Welcome</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_notes">My Notes</string>
    <string name="title_activity_create_new_note">Create New Note</string>

    // Homepage button titles
    <string name="notesTitle">Notes</string>
    <string name="mapsTitle">Maps</string>
    <string name="connectivityTitle">Connectivity</string>
    <string name="settingsTitle">Settings</string>



    // connectivity set up
    <string name="connect">Connect</string>
    <string name="Scan">Scan</string>
    <string name="bluetooth">fuck this shit</string>

    //settings activity titles
    <string name="alertTitle">Alerts</string>
    <string name="touchpadGesturesTitle">Touchpad &amp; Gestures</string>

    //alerts strings
    <string name="crowdTitle">Crowd Alert</string>
    <string name="cautionTitle">Caution Alert</string>
    <string name="messageTitle">Message Alert</string>
    <string name="arrivedTitle">Arrived Alert</string>

    <string-array name="OptionsTexts">
        <item>None</item>
        <item>Vibrate Phone</item>
        <item>Speaker Notification</item>
        <item>Glasses Beep</item>
    </string-array>

    //touchpad strings
    <string name="locationQTitle">Where am i?</string>
    <string name="messagesQTitle">Do I have any messages?</string>
    <string name="notesQTitle">Pull up my notes.</string>


    //touchpad options
    <string name="touchpadOptionTap">Tap</string>
    <string name="touchpadOptionSwipe">Swipe</string>
    <string name="touchpadOptionPressHold">Press &amp; Hold</string>



    // Notes activity related
    <string name="create_new_note_button_text">New Note</string>

    // Create new note activity related
    <string name="create_note_back_text">Go Back</string>
    <string name="create_note_submit_text">Create Note</string>
    <string name="create_note_title_view">Title</string>
    <string name="create_note_date_view">Date</string>
    <string name="create_note_content_view">Content</string>

    // View note activity related
    <string name="edit_note_btn_text">Edit Note</string>

    // Edit note activity related
    <string name="edit_note_submit_btn_text">Submit Changes</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

</resources>