<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateNewNoteActivity">

    <!-- Top Buttons-->
    <Button
        android:id="@+id/create_note_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_note_back_text"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"/>

    <Button
        android:id="@+id/create_note_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_note_submit_text"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"/>

    <!--    TitleField-->
    <TextView
        android:id="@+id/create_note_title_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_note_title_view"
        android:textSize="28sp"
        android:layout_below="@+id/create_note_back_button"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp" />
    <EditText
        android:id="@+id/create_note_title_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:inputType="text"
        android:hint="Enter Title"
        android:layout_below="@+id/create_note_title_view"
        android:layout_marginTop="10dp"
        android:autofillHints="Title" />

    <!--    DateField-->
    <TextView
        android:id="@+id/create_note_date_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_note_date_view"
        android:textSize="28sp"
        android:layout_below="@+id/create_note_title_field"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp" />
    <EditText
        android:id="@+id/create_note_date_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:inputType="date"
        android:hint="Enter Date"
        android:layout_below="@+id/create_note_date_view"
        android:layout_marginTop="10dp"
        android:autofillHints="Date" />

    <!--    NoteContentField-->
    <TextView
        android:id="@+id/create_note_content_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_note_content_view"
        android:textSize="28sp"
        android:layout_below="@+id/create_note_date_field"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp" />
    <EditText
        android:id="@+id/create_note_content_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:inputType="text"
        android:hint="Enter Note"
        android:layout_below="@+id/create_note_content_view"
        android:layout_marginTop="10dp"
        android:autofillHints="Date" />
</RelativeLayout>