<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <!--region alerts-->

        <!--alert title-->
        <TextView
            android:id="@+id/alertText"
            android:layout_width="113dp"
            android:layout_height="47dp"
            android:text="@string/alertTitle"
            android:textSize="35sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.097"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.042"></TextView>

        <!--region crowd alert-->
        <TextView
            android:id="@+id/alertCrowdText"
            android:layout_width="130dp"
            android:layout_height="47dp"
            android:gravity="center"
            android:text="@string/crowdTitle"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.103"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.133">

        </TextView>


        <Spinner
            android:id="@+id/crowdOption"
            android:layout_width="200dp"
            android:layout_height="47dp"
            android:text="pick one"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.829"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.133" />

        <!--endregion crowd alert-->

        <!--region caution alert-->
        <TextView
            android:id="@+id/alertCautionText"
            android:layout_width="130dp"
            android:layout_height="47dp"
            android:gravity="center"
            android:text="@string/cautionTitle"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.103"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.214">

            <Spinner
                android:id="@+id/cautionOption"
                android:layout_width="200dp"
                android:layout_height="47dp"
                android:text="pick one"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.829"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.214" />

        </TextView>

        <!--endregion caution alert-->

        <!--region message alert-->
        <TextView
            android:id="@+id/alertMessageText"
            android:layout_width="130dp"
            android:layout_height="47dp"
            android:gravity="center"
            android:text="@string/messageTitle"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.103"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.299">

        </TextView>

        <Spinner
            android:id="@+id/messageOption"
            android:layout_width="200dp"
            android:layout_height="47dp"
            android:text="pick one"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.829"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.299" />

        <!--endregion message alert-->

        <!--region arrived alert-->
        <TextView
            android:id="@+id/alertArrivedText"
            android:layout_width="130dp"
            android:layout_height="47dp"
            android:gravity="center"
            android:text="@string/arrivedTitle"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.103"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.381">

        </TextView>

        <Spinner
            android:id="@+id/arrivedOption"
            android:layout_width="200dp"
            android:layout_height="47dp"
            android:text="pick one"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.829"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.381" />

        <!--endregion arrived alert-->


    <!--endregion alerts-->


    <!--region touchpad and gestures-->

        <!--touchpad and gestures title -->

        <TextView
            android:id="@+id/touchpadText"
            android:layout_width="350dp"
            android:layout_height="47dp"
            android:text="@string/touchpadGesturesTitle"
            android:textSize="35sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.475"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.517"></TextView>

        <!--region where am i?-->
        <TextView
            android:id="@+id/locationQText"
            android:layout_width="110dp"
            android:layout_height="47dp"
            android:gravity="center"
            android:text="@string/locationQTitle"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.096"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.599" />


        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="360dp"
            android:layout_height="47dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.668">

            <RadioButton
                android:id="@+id/tapBtn"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/radio_flat_selector"
                android:text="@string/touchpadOptionTap"
                android:button="@android:color/transparent"
                android:checked="true"
                android:textColor="@drawable/radio_flat_text_selector"
                android:paddingLeft="16dp"
                android:paddingTop="3dp"
                android:paddingRight="16dp"
                android:paddingBottom="3dp"
                android:textSize="50px" />

            <RadioButton
                android:id="@+id/pressHoldBtn"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/radio_flat_selector"
                android:text="@string/touchpadOptionPressHold"
                android:button="@android:color/transparent"
                android:textColor="@drawable/radio_flat_text_selector"
                android:paddingLeft="16dp"
                android:paddingTop="3dp"
                android:paddingRight="16dp"
                android:paddingBottom="3dp"
                android:textSize="50px" />

            <RadioButton
                android:id="@+id/swipeBtn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/radio_flat_selector"
                android:text="@string/touchpadOptionSwipe"
                android:button="@android:color/transparent"
                android:textColor="@drawable/radio_flat_text_selector"
                android:paddingLeft="16dp"
                android:paddingTop="3dp"
                android:paddingRight="16dp"
                android:paddingBottom="3dp"
                android:textSize="50px"  />

        </RadioGroup>

        <!--endregion where am i?-->

        <!--region do i have any messages?-->
        <TextView
            android:id="@+id/messagesQText"
            android:layout_width="230dp"
            android:layout_height="47dp"
            android:gravity="center"
            android:text="@string/messagesQTitle"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.739">

        </TextView>

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="360dp"
            android:layout_height="47dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8">

            <RadioButton
                android:id="@+id/tapBtn2"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/radio_flat_selector"
                android:text="@string/touchpadOptionTap"
                android:button="@android:color/transparent"
                android:checked="true"
                android:textColor="@drawable/radio_flat_text_selector"
                android:paddingLeft="16dp"
                android:paddingTop="3dp"
                android:paddingRight="16dp"
                android:paddingBottom="3dp"
                android:textSize="50px" />

            <RadioButton
                android:id="@+id/pressHoldBtn2"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/radio_flat_selector"
                android:text="@string/touchpadOptionPressHold"
                android:button="@android:color/transparent"
                android:textColor="@drawable/radio_flat_text_selector"
                android:paddingLeft="16dp"
                android:paddingTop="3dp"
                android:paddingRight="16dp"
                android:paddingBottom="3dp"
                android:textSize="50px" />

            <RadioButton
                android:id="@+id/swipeBtn2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/radio_flat_selector"
                android:text="@string/touchpadOptionSwipe"
                android:button="@android:color/transparent"
                android:textColor="@drawable/radio_flat_text_selector"
                android:paddingLeft="16dp"
                android:paddingTop="3dp"
                android:paddingRight="16dp"
                android:paddingBottom="3dp"
                android:textSize="50px"  />

        </RadioGroup>
        <!--endregion do i have any messages?-->

        <!--region pull up my notes-->
        <TextView
            android:id="@+id/notesQText"
            android:layout_width="160dp"
            android:layout_height="47dp"
            android:gravity="center"
            android:text="@string/notesQTitle"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.115"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.877">

        </TextView>

        <RadioGroup
            android:id="@+id/radioGroup3"
            android:layout_width="360dp"
            android:layout_height="47dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.941">

            <RadioButton
                android:id="@+id/tapBtn3"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/radio_flat_selector"
                android:text="@string/touchpadOptionTap"
                android:button="@android:color/transparent"
                android:checked="true"
                android:textColor="@drawable/radio_flat_text_selector"
                android:paddingLeft="16dp"
                android:paddingTop="3dp"
                android:paddingRight="16dp"
                android:paddingBottom="3dp"
                android:textSize="50px" />

            <RadioButton
                android:id="@+id/pressHoldBtn3"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/radio_flat_selector"
                android:text="@string/touchpadOptionPressHold"
                android:button="@android:color/transparent"
                android:textColor="@drawable/radio_flat_text_selector"
                android:paddingLeft="16dp"
                android:paddingTop="3dp"
                android:paddingRight="16dp"
                android:paddingBottom="3dp"
                android:textSize="50px" />

            <RadioButton
                android:id="@+id/swipeBtn3"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/radio_flat_selector"
                android:text="@string/touchpadOptionSwipe"
                android:button="@android:color/transparent"
                android:textColor="@drawable/radio_flat_text_selector"
                android:paddingLeft="16dp"
                android:paddingTop="3dp"
                android:paddingRight="16dp"
                android:paddingBottom="3dp"
                android:textSize="50px"  />

        </RadioGroup>

        <!--endregion pull up my notes-->

    <!--endregion touchpad and gestures-->

    <Button
        android:id="@+id/saveButt"
        android:layout_width="80dp"
        android:layout_height="47dp"
        android:text="save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.878"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

</androidx.constraintlayout.widget.ConstraintLayout>